# 2022

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Cucubau.cpp  FirstFile  Header.h  JohnWick.cpp  Makefile  Operations.h  README.md  SecondFile  ThirdFile  XMLObject.cpp  XMLObject.hpp  cat.cpp  cmake_install.cmake  cmmdc.cpp  data.xml  dog.cpp  file.txt  file1.cpp  file2.cpp  file3.cpp  first_file.cc  function.h  functions.h  isEven.cpp  main.cpp  player.cpp  product.cpp  product.hpp  project1  second_file.cc  store.cpp  store.hpp  third_file.cc  xmlClass.hpp
H2/: .gitignore  CMakeLists.txt  main.cc  store.xml
H2/include/: Product.h  ProductManager.h  XMLHandler.h
H2/src/: Product.cc  ProductManager.cc  XMLHandler.cc
course_1_homework/: .gitignore  CMakeLists.txt  cmmdc.cpp  factorial.cpp  main.cpp  math_function.h
course_2_homework/: CMakeLists.txt  main.cc
files/: animal.cpp  animal.h  cat.cpp
include/: first_test_header.h
main/: main.cpp
model/: Product.cpp  Product.h
product/: Product.cpp  Product.h
readWrite/: ReadWrite.cpp  ReadWrite.h
read_write/: fileOperations.cpp  fileOperations.h  in.txt  out.txt
repository/: Repository.cpp  Repository.h
src/: first_test_header.cc
store/: Store.cpp  Store.h
tema1/: CMakeLists.txt  armstrong.cpp  functii.h  main.cpp  suma.cpp
tema1DHoka/: CMakeLists.txt  README.md  entity.cpp  entity.h
tema2/: CMakeLists.txt  Product.cpp  ProductManager.cpp  XmlParser.cpp  main.cpp
tema2DHoka/: CMakeLists.txt  date.txt  file.cpp  file.h  main.cpp  product.cpp  product.h  store.cpp  store.h
(+38 files in other folders)
